--- a/bd-express/package.json
+++ b/bd-express/package.json
@@ -9,6 +9,7 @@
     "dev:type": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
@@ -20,6 +21,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.8",
